docs/api/qiskit/0.44/qiskit.transpiler.passes.DAGLongestPath.mdx
---
title: DAGLongestPath
description: API reference for qiskit.transpiler.passes.DAGLongestPath
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.DAGLongestPath
---

# DAGLongestPath

<Class id="qiskit.transpiler.passes.DAGLongestPath" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.25/qiskit/transpiler/passes/analysis/dag_longest_path.py" signature="qiskit.transpiler.passes.DAGLongestPath(*args, **kwargs)">
  Bases: [`AnalysisPass`](qiskit.transpiler.AnalysisPass "qiskit.transpiler.basepasses.AnalysisPass")

  Return the longest path in a DAGcircuit as a list of DAGOpNodes, DAGInNodes, and DAGOutNodes.

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.DAGLongestPath.is_analysis_pass" name="is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.DAGLongestPath.is_transformation_pass" name="is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  ### name

  <Function id="qiskit.transpiler.passes.DAGLongestPath.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.DAGLongestPath.run" name="run" signature="run(dag)">
    Run the DAGLongestPath pass on dag.
  </Function>
</Class>

